testsuite/tests/dependent/should_fail/T14066.stderr

T14066.hs:15:59: error:
    • Expected kind ‘k0’, but ‘b’ has kind ‘k’
        because kind variable ‘k’ would escape its scope
      This (rigid, skolem) kind variable is bound by
        an explicit forall k (b :: k)
        at T14066.hs:15:36-45
    • In the second argument of ‘SameKind’, namely ‘b’
      In the type signature: g :: forall k (b :: k). SameKind a b
      In the expression:
        let
          g :: forall k (b :: k). SameKind a b
          g = undefined
        in ()
    • Relevant bindings include x :: Proxy a (bound at T14066.hs:15:4)
